--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document test</title>
-    <script src="javaScript/lesboucles.js"></script>
+    <script src="javaScript/raccourcis-js"></script>
   </head>
   <body>
     <h1>Users</h1>
